fixed alignment

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -10,12 +10,28 @@
     justify-content: center;
 }
 
+.CommandTitle {
+    color:grey;
+    margin-top: 2vh;
+    margin-bottom: 5vh;
+    margin-left: 3vh;
+}
+
+.optionList {
+  list-style-type: none;
+  justify-content:center;
+  //margin-left: 1vh;
+}
+
+.commandText{
+    padding-top: 3vh;
+}
+
 .outputBox {
-    height: 200vh;
     width: 135vh;
     background-color: white;
-    float:left;
-    clear: left;
+//     float:left;
+//     clear: left;
 }
 
 .Search-area {
@@ -41,7 +57,7 @@
 .search-bar {
     width: 100vh;
     float:left;
-    margin-top: 1vh;
+    margin-top: 2vh;
     margin-right: 5vh;
 }
 
